--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     compile 'jp.wasabeef:blurry:2.1.1'
     compile 'com.github.HotBitmapGG:RingProgressBar:V1.2.3'
     implementation 'com.android.support:cardview-v7:27.1.1'
+    compile 'org.jsoup:jsoup:1.9.1'
 }
