--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     compile 'com.github.HotBitmapGG:RingProgressBar:V1.2.3'
     implementation 'com.android.support:cardview-v7:27.1.1'
     compile 'org.jsoup:jsoup:1.9.1'
+    implementation 'com.android.support:percent:27.1.1'
 }
