title had been fixed and now working on image

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
     compile 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'jp.wasabeef:blurry:2.1.1'
     compile 'com.github.HotBitmapGG:RingProgressBar:V1.2.3'
     implementation 'com.android.support:cardview-v7:27.1.1'
