--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,12 +36,9 @@ dependencies {
     compile 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.squareup.picasso:picasso:2.6.0-SNAPSHOT'
-    implementation 'com.github.bumptech.glide:glide:4.6.1'
     compile 'jp.wasabeef:blurry:2.1.1'
     compile 'com.github.HotBitmapGG:RingProgressBar:V1.2.3'
     implementation 'com.android.support:cardview-v7:27.1.1'
-    compile 'org.jsoup:jsoup:1.9.1'
-    compile 'com.github.bumptech.glide:glide:4.6.1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
+    compile 'com.sothree.slidinguppanel:library:3.4.0'
 
 }
