--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,5 +40,6 @@ dependencies {
     compile 'com.github.HotBitmapGG:RingProgressBar:V1.2.3'
     implementation 'com.android.support:cardview-v7:27.1.1'
     compile 'com.sothree.slidinguppanel:library:3.4.0'
+    implementation 'com.google.android.exoplayer:exoplayer:2.8.2'
 
 }
