--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,6 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.1'
     compile 'com.sothree.slidinguppanel:library:3.4.0'
     implementation 'com.google.android.exoplayer:exoplayer:2.8.2'
+    implementation 'com.github.d-max:spots-dialog:1.1@aar'
 
 }
